create page for digisynth

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="space"></div>
     <main>
         <div class ="article">
-            <h2>Output to LCD from EEPROM</h2>
+            <h2>Three Waveform Digital Synthesizer with ADSR Amplitude Envelope</h2>
             <div class = "img-flex">
                 <img src="img/bare_metal_lcd.jpg" width="100%" height="auto" style="border-radius: 5%">
             </div>
@@ -30,190 +30,6 @@
                     to a 16x2 LCD screen. There are five main components to the circuit, the clock, 
                     enable counter, address counter, EEPROM, and the LCD. This page details how each component works
                     togather and a video is shown below of the circuit in action.
-                </p>
-            </div>
-            <h3>Clock</h3>
-            <div class = "p-flex">
-                <p style = "text-align:left">
-                    The clock is a 555 timer configured in astable mode, both the Address and Enable 
-                    counter run off this clock signal. The frequency is controlled by a potentiometer 
-                    and can be seen by the white LED. This clock configuration was taken from 
-                    <a href="https://www.youtube.com/watch?v=kRlSFm519Bo">this</a> Ben Eater video which
-                    is a great resource for understanding how this IC functions. For our purposes the 
-                    clock provides our circuit with a 5v peak to peak square wave that our counter ICs run
-                    off of. In this configuration with a 10uf capacitor and two 330 ohm resistors alongside a 100k ohm
-                    potentiometer the clock can range from .71 Hz to 140 Hz.
-                </p>
-            </div>
-            <h3>Address Counter</h3>
-            <div class = "p-flex">
-                <p style = "text-align:left">
-                    The chip used for the address counter is the CD4060B binary counter, a functional diagram
-                    of the IC is shown below. Pins 9, 10, and 11 can be used to configure the internal clock as
-                    seen in <a href="https://www.youtube.com/watch?v=tE0KNMN6244">this</a> video.
-                    In our case we are using the external clock mentioned above. This IC functions as a 
-                    standard counter, on the negative edge of the clock pulse the counter advances. The 
-                    first three bits of this counter are not mapped to pins on the IC, so the fourth bits
-                    is the lowest available. For timing reasons furthur discussed in the enable counter section
-                    the address counter uses the fifth bit of the ICs counter as its starting bit. This means that
-                    every 16 negative clock edges the address counter advances, which can be observed in the video below.
-                </p>
-            </div> 
-            <div class = "img-flex">
-                <img src="img/timer_functional_diagram.png" width="20%" height="auto">
-            </div>
-            <h3>Enable Counter</h3>  
-            <div class = "p-flex">
-                <p style = "text-align:left">
-                    The enable pin tells the LCD when to take in data from the data pins. In the timing diagram
-                    shown below we can see that when the enable pin goes from high to low the data on the data pins
-                    will be taken in, this data can be instructions, or it can be values to display.
-                </p>
-            </div> 
-            <div class = "img-flex">
-                <img src="img/lcd_timing_datasheet.png" width="50%" height="auto">
-            </div>
-            <div class = "p-flex">
-                <p style = "text-align:left">
-                    To achieve this timing I run the clock signal through a xor gate acting as a not gate, and run the
-                    enable counter from this new signals. So the address counter increments on the negative edge of the
-                    clock while the enable counter increments on the positive edge. The timings can be seen in the graph below.
-                    Before the first address bit can change the enable pin can toggle on and off effectively capturing the
-                    data before the address increments. The enable counter is shown by the green LED.
-                </p>
-            </div> 
-            <div class = "img-flex">
-                <img src="img/lcd_timing_written.jpg" width="50%" height="auto">
-            </div> 
-            <h3>EEPROM</h3>  
-            <div class = "p-flex">
-                <p style = "text-align:left">
-                    I used the CAT28C16A EEPROM to store the values needed to send to the LCD, this includes
-                    the values to initialize the LCD and the ascii values of the message "hello predo". I flashed
-                    the data to the EEPROM using the following circuit.
-                </p>
-            </div> 
-            <div class = "img-flex">
-                <img src="img/flashing_circuit.jpg" width="50%" height="auto">
-            </div>
-            <div class = "p-flex">
-                <p style = "text-align:left">
-                    To write to the EEPROM we need to select the write mode using the chip enable(CE), output enable(OE), 
-                    and write enable(WE) pins, controlled by the three far left buttons on the bread board. Write mode is 
-                    entered when CE is low and OE is high. Data, given by the 8 pins on the right, is latched to the current
-                    address, given by the 5 pins in the middle, on the rising edge of the WE pin. I used the LCD in 4-bit mode
-                    so I only used 5 bits of the EEPROMs storage, 4 bits for the data pins and 1 bit to indicate instructions 
-                    or value to display. 
-                </p>
-            </div> 
-            <h3>LCD</h3>  
-            <div class = "p-flex">
-                <p style = "text-align:left">
-                    I used a 1602a 16x2 LCD in 4bit mode. The RS pin indicates whether the value on the data pins are instructions
-                    or values to be displayed. A list of the values I used are shown below, and can be seen by the yellow LEDs in the 
-                    video.
-                </p>
-            </div>
-            <div class = "img-flex"> 
-                <table>
-                    <tr>
-                        <th>Address</th>
-                        <th>RS</th>
-                        <th>D7</th>
-                        <th>D6</th>
-                        <th>D5</th>
-                        <th>D4</th>
-                        <th>Description</th>
-                    </tr>
-                    <tr>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>1</td>
-                        <td>0</td>
-                        <td>4-bit mode</td>
-                    </tr>
-                    <tr>
-                        <td>1</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td rowspan="2">Clear Display</td>
-                    </tr>
-                    <tr>
-                        <td>2</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>1</td>
-                    </tr>
-                    <tr>
-                        <td>3</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td rowspan="2">Return Home</td>
-                    </tr>
-                    <tr>
-                        <td>4</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>1</td>
-                        <td>0</td>
-                    </tr>
-                    <tr>
-                        <td>5</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td>0</td>
-                        <td rowspan="2">Display On, No Cursor</td>
-                    </tr>
-                    <tr>
-                        <td>6</td>
-                        <td>0</td>
-                        <td>1</td>
-                        <td>1</td>
-                        <td>0</td>
-                        <td>0</td>
-                    </tr>
-                    <tr>
-                        <td>X</td>
-                        <td>1</td>
-                        <td>X</td>
-                        <td>X</td>
-                        <td>X</td>
-                        <td>X</td>
-                        <td rowspan="2">Ascii Value</td>
-                    </tr>
-                    <tr>
-                        <td>X</td>
-                        <td>1</td>
-                        <td>X</td>
-                        <td>X</td>
-                        <td>X</td>
-                        <td>X</td>
-                    </tr>
-                </table>
-            </div> 
-            <div class = "p-flex">
-                <p style = "text-align:left; padding-top:10px">
-                    The video below shows the circuit working, the ICs from top-left to the bottom-right are the address 
-                    counter(<a href="datasheets/CD4060BE.pdf", taget="_blank">CD4060BE</a>), 
-                    the EEPROM(<a href="datasheets/CAT28C16AP.pdf", target="_blank">CAT28C16AP</a>), 
-                    the XOR gate(<a href="datasheets/MC14070BCP.pdf", target="_blank">MC14070BCP</a>), 
-                    the enable counter(<a href="datasheets/CD4060BE.pdf", taget="_blank">CD4060BE</a>), 
-                    and the clock(<a href="datasheets/NE555P.pdf", taget="_blank">NE555P</a>), 
-                    and the LCD(<a href="datasheets/1602A.pdf", taget="_blank">1602A</a>). The button controls the reset 
-                    pin on the counters and the potentiometer controls the frequency of the clock
                 </p>
             </div>
             <div class = "img-flex">
