--- a/nav.html
+++ b/nav.html
@@ -9,14 +9,14 @@
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-            <a class="nav-link" href="index.html">EEPROM to LCD</a>
+            <a class="nav-link" href="index.html">Digital Synth</a>
             </li>
             <li class="nav-item">
             <a class="nav-link" href="node_network.html">Node Network</a>
             </li>   
-            <!-- <li class="nav-item">
-            <a class="nav-link" href="esp32clock.html">ESP32 Clock</a>
-            </li>  -->
+            <li class="nav-item">
+            <a class="nav-link" href="lcd_to_eeprom.html">EEPROM To LCD</a>
+            </li> 
             <!-- <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 More Projects
