change vid and pic

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class ="article">
             <h2>Three Waveform Digital Synthesizer with ADSR Amplitude Envelope</h2>
             <div class = "img-flex">
-                <img src="img/bare_metal_lcd.jpg" width="100%" height="auto" style="border-radius: 5%">
+                <img src="img/digi_synth.jpg" width="100%" height="auto" style="border-radius: 5%">
             </div>
             <div class = "p-flex" style="padding-top: 20px;">
                 <p style = "text-align:left">
@@ -33,7 +33,7 @@
                 </p>
             </div>
             <div class = "img-flex">
-                <iframe width="420" height="345" src="https://www.youtube.com/embed/Fb_cGUgnh1k" allow="fullscreen;">
+                <iframe width="420" height="345" src="https://www.youtube.com/embed/oUR1ITL3Quo" allow="fullscreen;">
                 </iframe>   
             </div>
         </div>
