--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             </div>
             <div class = "p-flex" style="padding-top: 20px;">
                 <p style = "text-align:left">
-                    In this project I created a digital synthesizer with an ESP32, Midi Breakout Board, and PCM5102A DAC. Midi messages are received over UART by the ESP32 which then synthesizes PCM values based on the selected waveform and ADSR (Attack, Decay, Sustain, Release) enevelope settings. The PCM values are then sent to the PCM5102A DAC over I2S. The application running on the ESP32 was written in C and uses FreeRTOS tasks, queues, and notifications. It can be broken up into two main blocks, the midi processing block and the audio processing block.
+                    In this project I created a digital synthesizer with an ESP32, Midi Breakout Board, and PCM5102A DAC. Midi messages are received over UART by the ESP32 which then synthesizes PCM values based on the selected waveform and ADSR (Attack, Decay, Sustain, Release) enevelope settings. The PCM values are then sent to the PCM5102A DAC over I2S. The application running on the ESP32 was written in C and uses FreeRTOS tasks, queues, and notifications. The source code for this project can be found in this <a href=https://github.com/03predo/DigiSynth>git repository</a>. It can be broken up into two main blocks, the midi processing block and the audio processing block.
                 </p>
             </div>
             <h3>Midi Processing Block</h3>
