add github links

--- a/index.html
+++ b/index.html
@@ -20,10 +20,16 @@
     <div class="space"></div>
     <main>
         <div class ="article">
-            <h2>OV7670 Video Stream Server and Client</h2>
-            <div class = "img-flex">
-                <img src="img/video_server.jpg" width="70%" height="auto" style="border-radius: 5%">
-            </div> 
+          <h2>OV7670 Video Stream Server and Client</h2>
+          <div class = "img-flex">
+              <img src="img/video_server.jpg" width="70%" height="auto" style="border-radius: 5%">
+          </div> 
+          <div class = "p-flex" style="padding-top: 20px;">
+            <p style = "text-align:left">
+                In this project I created a server with the ESP32 that uses an OV7670 to capture images and stream them to a client application. The source code for the <a href=https://github.com/03predo/esp32_stream_server>server</a> and <a href=https://github.com/03predo/stream_client>client</a> can be found on my github.
+            </p>
+          </div>
+        </div>
     </main>
     <div class="space"></div>
 </body>
