--- a/nav.html
+++ b/nav.html
@@ -9,6 +9,9 @@
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
+            <a class="nav-link" href="index.html">Digital Synth</a>
+            </li>
+            <li class="nav-item">
             <a class="nav-link" href="digital_synth.html">Digital Synth</a>
             </li>
             <li class="nav-item">
