--- a/nav.html
+++ b/nav.html
@@ -9,7 +9,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="collapsibleNavbar">
         <ul class="navbar-nav">
             <li class="nav-item">
-            <a class="nav-link" href="index.html">Digital Synth</a>
+            <a class="nav-link" href="index.html">Video Streaming</a>
             </li>
             <li class="nav-item">
             <a class="nav-link" href="digital_synth.html">Digital Synth</a>
