--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </p>
           </div>
           <div class = "img-flex">
-            <iframe width="420" height="345" src="https://www.youtube.com/watch?v=NAy5VsRxw_o" allow="fullscreen;">
+            <iframe width="420" height="345" src="https://www.youtube.com/embed/NAy5VsRxw_o" allow="fullscreen;">
             </iframe>   
           </div>
         </div>
